--- a/Application/trashtag/pubspec.yaml
+++ b/Application/trashtag/pubspec.yaml
@@ -30,6 +30,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  
+  google_nav_bar: ^5.0.6
+  toast: ^0.3.0
+  qrscan: ^0.3.3
+  google_maps_flutter:
+  geolocator:
+  url_launcher:
+  location:
+  permission_handler: ^8.1.4+2
+  http:
+  shared_preferences:
+  carousel_slider: ^4.2.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -53,12 +65,15 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
 
+
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
+  assets:
+      - assets/
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
