--- a/Application/trashtag/pubspec.yaml
+++ b/Application/trashtag/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   http:
   shared_preferences:
   carousel_slider: ^4.2.1
+  flutter_web_qrcode_scanner: 1.1.1
 
 
   # The following adds the Cupertino Icons font to your application.
