--- a/Application/trashtag/pubspec.yaml
+++ b/Application/trashtag/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   google_nav_bar: ^5.0.6
   toast: ^0.3.0
   qrscan: ^0.3.3
-  google_maps_flutter:
+  google_maps_flutter: 2.6.1
   geolocator:
   url_launcher:
   location:
