--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -6,12 +6,15 @@ Flask-Cors==5.0.0
 Flask-QRcode==3.2.0
 Flask-SQLAlchemy==3.1.1
 greenlet==3.1.0
+importlib_metadata==8.5.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
 pillow==10.4.0
+psycopg2-binary==2.9.9
 pypng==0.20220715.0
 qrcode==7.4.2
 SQLAlchemy==2.0.34
 typing_extensions==4.12.2
 Werkzeug==3.0.4
+zipp==3.20.2
