--- a/Application/trashtag/pubspec.yaml
+++ b/Application/trashtag/pubspec.yaml
@@ -36,13 +36,14 @@ dependencies:
   qrscan: ^0.3.3
   google_maps_flutter: 2.6.1
   geolocator:
-  url_launcher:
+  url_launcher: ^6.3.0
   location:
   permission_handler: ^8.1.4+2
   http:
   shared_preferences:
   # carousel_slider: ^4.2.1
   flutter_web_qrcode_scanner: 1.1.1
+  
 
 
   # The following adds the Cupertino Icons font to your application.
